<resources>
    <string name="app_name">Social Posts App</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="signout">SignOut</string>
    <string name="signUp">Sign Up</string>
    <string name="pick_image">Pick Image</string>
    <string name="register_now">Register now!</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
</resources>