<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/card_top_margin"
        android:layout_height="match_parent"
        tools:context=".ui.signUp.SignUpActivity">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/signUp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/editTextVertical"
            android:textSize="50sp"
            android:layout_height="wrap_content"/>
    <ImageView
            android:layout_marginTop="@dimen/card_top_margin"
            android:onClick="onImageClicked"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/profilePicButton"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pick_image"/>
    <EditText
            android:layout_width="match_parent"
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/editTextVertical"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/card_top_margin"
            android:layout_height="wrap_content"/>
    <Button
            android:text="@string/signUp"
            android:id="@+id/signUpButton"
            android:layout_marginTop="@dimen/card_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>