<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/card_top_margin"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/editTextVertical"
            android:textSize="50sp"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/editTextVertical"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/card_top_margin"
            android:layout_height="wrap_content"/>
    <Button
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_marginTop="@dimen/card_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>